# geojson2osm

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  test.yml
geojson2osm/: __init__.py  __main__.py  geojson2osm.py
src/geojson2osm/: __init__.py  __main__.py  geojson2osm.py
tests/: test_geojson2osm.py  test_main.py
tests/files/: input.geojson  output.xml  repeated_point.geojson  repeated_point.xml
