[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geojson2osm"
version = "0.0.2"
authors = [
  { name="Kshitijraj Sharma", email="skshitizraj@gmail.com" },
]
description = "A Python package to convert GeoJSON data to OSM XML format."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tests = [
  'mypy',
  'pytest',
  'pytest-cov',
  'pytest-mock',
  'coveralls',
  'pep8-naming',
  'flake8-annotations'
]
[project.urls]
"Homepage" = "https://github.com/kshitijrajsharma/geojson2osm"
"Bug Tracker" = "https://github.com/kshitijrajsharma/geojson2osm/issues"
    
[tool.pytest.ini_options]
pythonpath = "src:tests"
testpaths = [
    "tests",
]
